# seL4_rpi4

./: .gitignore  README.md  build-app.sh  build.sh
GEC/: FindGEC.cmake
GEC-block/: CMakeLists.txt
GEC-block-linux/: FindGEC.cmake  include  src
GEC-block/include/: ed25519-hash.h  gec.h  modm-donna-64bit.h
GEC-linux/: CMakeLists.txt  FindGEC.cmake  include  src
GEC-linux/include/: mavlink-gec.h
GEC-new/: CMakeLists.txt  Makefile  README.md  crypt  main.c
GEC-new/ed25519/src/: ed25519.h  sign.c
GEC-new/src/: ed25519.c
GEC/src/: gec.c
app/: CMakeLists.txt  comm.camkes  settings.cmake
app/components/Decrypt/: Decrypt.camkes
app/components/Encrypt/src/: Encrypt.c
app/components/RX/: RX.camkes
app/components/RX/src/: RX.c
app/components/Telemetry_RX/: Telemetry_RX.camkes
app/vm-linux/: CMakeLists.txt
app/vm-linux/images/: rpi4.dts
apps/can/: CMakeLists.txt  can.camkes
apps/can/components/spi/: spi.camkes
apps/can/interfaces/: spi.idl4
apps/comm/: CMakeLists.txt  README.md  comm.camkes  settings.cmake
apps/comm-crypto/: CMakeLists.txt  README.md  comm.camkes
apps/comm-crypto-block/: README.md  comm.camkes
apps/comm-crypto-block/components/Decrypt/: Decrypt.camkes
apps/comm-crypto-block/components/Encrypt/: Encrypt.camkes
apps/comm-crypto-block/include/: my_type.h
apps/comm-crypto-relay/: CMakeLists.txt  README.md  comm.camkes  settings.cmake
apps/comm-crypto-relay/components/GPIO/: GPIO.camkes
apps/comm-crypto-relay/components/Pixhawk_RX/: Pixhawk_RX.camkes
apps/comm-crypto-relay/components/Telemetry_RX/: Telemetry_RX.camkes
apps/comm-crypto-relay/include/: my_type.h
apps/comm-crypto-relay/vm-linux/: CMakeLists.txt
apps/comm-crypto-relay/vm-linux/images/: rpi4.dtb  rpi4.dts
apps/comm-crypto-relay/vm-linux/normal/: vm.camkes
apps/comm-crypto-rpc-relay/: CMakeLists.txt  README.md  comm.camkes
apps/comm-crypto-rpc-relay/components/Decrypt/: Decrypt.camkes
apps/comm-crypto-rpc-relay/components/Encrypt/: Encrypt.camkes
apps/comm-crypto-rpc-relay/components/Pixhawk/: Pixhawk.camkes
apps/comm-crypto-rpc-relay/components/Pixhawk_RX/: Pixhawk_RX.camkes
apps/comm-crypto-rpc-relay/components/Pixhawk_TX/: Pixhawk_TX.camkes
apps/comm-crypto-rpc-relay/components/Telemetry/: Telemetry.camkes
apps/comm-crypto-rpc-relay/components/Telemetry_TX/: Telemetry_TX.camkes
apps/comm-crypto-rpc-relay/include/: my_type.h
apps/comm-crypto-rpc-relay/interfaces/: serial.idl4
apps/comm-crypto/GEC/: CMakeLists.txt
apps/comm-crypto/components/Encrypt/: Encrypt.camkes
apps/comm-crypto/components/Telemetry_RX/: Telemetry_RX.camkes
apps/comm-crypto/include/: my_type.h
apps/comm-encrypt/: CMakeLists.txt  comm.camkes
apps/comm-encrypt/GEC/include/: ed25519-hash.h
apps/comm-encrypt/GEC/src/: gec.c
apps/comm-encrypt/components/Decrypt/: Decrypt.camkes
apps/comm-encrypt/include/: my_type.h
apps/comm-encrypt/interfaces/: uart.idl4
apps/comm-mavlink-relay/: CMakeLists.txt  README.md  comm.camkes
apps/comm-mavlink-relay/include/: my_type.h
apps/comm-mavlink-rpc-relay/: CMakeLists.txt  README.md  comm.camkes
apps/comm-mavlink-rpc-relay/interfaces/: uart.idl4
apps/comm-packet/: CMakeLists.txt  README.md  comm.camkes
apps/comm-uart/: CMakeLists.txt  README.md  comm.camkes
apps/comm-uart/components/Decrypt/: Decrypt.camkes
apps/comm-uart/components/Decrypt/src/: Decrypt.c
apps/comm-uart/components/Encrypt/: Encrypt.camkes
apps/comm-uart/components/Encrypt/src/: Encrypt.c
apps/comm-uart/components/GPIO/: GPIO.camkes
apps/comm-uart/components/Telemetry/: Telemetry.camkes
apps/comm-uart/components/Telemetry/src/: Telemetry.c
apps/comm-uart/components/UART/: UART.camkes
apps/comm-uart/components/UART/src/: UART.c
apps/comm-uart/include/: top_types.h
apps/comm/include/: top_types.h
apps/comm/interfaces/: uart.idl4
apps/dencypt-test/: Makefile
apps/dencypt-test/src/: main.c
apps/gcs-crypto/: CMakeLists.txt
apps/gcs-crypto-block/: CMakeLists.txt
apps/gcs-crypto-block/src/: main.c
apps/gcs-crypto/src/: main.c
apps/key-exchange/: CMakeLists.txt  README.md  comm.camkes
apps/key-exchange/components/Decrypt/: Decrypt.camkes
apps/key-exchange/components/Decrypt/src/: Decrypt.c
apps/key-exchange/components/Encrypt/: Encrypt.camkes
apps/key-exchange/components/Encrypt/src/: Encrypt.c
apps/key-exchange/components/KeyExchange/: KeyExchange.camkes
apps/key-exchange/components/KeyExchange/src/: KeyExchange.c
apps/key-exchange/components/Pixhawk/: Pixhawk.camkes
apps/key-exchange/components/Pixhawk/src/: Pixhawk.c
apps/key-exchange/components/Pixhawk_TX/: Pixhawk_TX.camkes
apps/key-exchange/components/Pixhawk_TX/src/: Pixhawk_TX.c
apps/key-exchange/components/Telemetry/: Telemetry.camkes
apps/key-exchange/components/Telemetry/src/: Telemetry.c
apps/key-exchange/components/Telemetry_TX/: Telemetry_TX.camkes
apps/key-exchange/components/Telemetry_TX/src/: Telemetry_TX.c
apps/key-exchange/include/: my_type.h
apps/key-exchange/interfaces/: key.idl4  pixhawk.idl4  ringbuffer.idl4  serial.idl4  telemetry.idl4
apps/spi/: CMakeLists.txt  spi.camkes
apps/telemetry/: CMakeLists.txt  README.md
apps/uart/: CMakeLists.txt  README.md  uart.camkes
apps/uart-timer/: uart.camkes
apps/uart2/: CMakeLists.txt  README.md  uart.camkes
apps/uart2/include/: my_type.h
backup/firmware/: capdl-loader-image-arm-bcm2711  cmdline.txt  config.txt  kernel8.img  uboot.env
diffs/: kernel.patch
diffs/projects/: global-components.patch  sel4-tutorials.patch  util_libs.patch
diffs/tools/: seL4.patch
docs/: GEC.drawio  comm-uart.drawio  comm.drawio  key-exchange-simple.drawio  key-exchange.drawio  system.drawio
kernel/tools/dts/: rpi4.dts
pics/: GEC-new.drawio  GEC.drawio  comm-norpc.drawio  comm-rpc.drawio  comm-smaccm.drawio  comm.drawio  components.drawio  hardware.drawio  key-exchange-simple.drawio  key-exchange.drawio  system.drawio
projects/sel4-tutorials/: settings.cmake
projects/vm/: Findcamkes-arm-vm.cmake
scripts/: build-app.sh  build-kernel.sh
(+85 files in other folders)
